<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_mnemonic_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_backup_wallet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:gravity="center"
            android:text="@string/backup_wallet_tip"
            android:textColor="#FF38525F"
            android:textSize="15sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="25dp"
            android:background="#FFF3F3F3"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/backup_wallet_tip_content_p1"
                android:textColor="#FF38525F"
                android:textSize="12sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:text="@string/backup_wallet_tip_content_p2"
                android:textColor="#FF38525F"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="start"

                android:text="@string/backup_wallet_tip_content_p3"
                android:textColor="#FF38525F"
                android:textSize="12sp" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_action_confirm"
                style="@style/MnemonicBackupBtn"
                android:layout_above="@+id/tv_view_to_tutorial"
                android:layout_alignParentBottom="false"
                android:text="@string/backup_wallet_mnemonic" />

            <TextView
                android:id="@+id/tv_view_to_tutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:text="@string/view_tutorial" />


        </RelativeLayout>

    </LinearLayout>


</layout>


